Migrate DiscordNotifier off the deprecated URL(String) constructor (#23)
new URL(String) has been deprecated since JDK 20 in favor of
URI.create(str).toURL(), and was emitting a deprecation warning on
every build. Behavior is unchanged: sendMessage still declares
IOException and callers already catch broadly.

Closes #22

Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>